--- a/gb/24/4/13/n14224875.md
+++ b/gb/24/4/13/n14224875.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>徐客：红朝丑剧 五大吹鼓手“媚习”升官</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/03/id14209127-GettyImages-2064220959-600x400.jpg" />
 <h6>2024年3月10日，在北京大会堂举行的中共全国政协会议（CPPCC）闭幕式上，人们从摄影屏幕上看到中共党魁习近平(JADE GAO/AFP via Getty Images)
@@ -21,7 +21,7 @@
 <p>出生于1975年的霍小光，有“习近平御用记者”之称。</p>
 <p>据《中国新闻出版广电》报导，中共十八大后，霍小光承担习在国内考察、出访、出席会议的超过110场的报导，从没出差错，被称为新华社的所谓“放心记者”。</p>
 <p>官媒定位霍小光让人“放心”，其实是让习放心，而不是让中国老百姓放心。这让我想起秦刚。</p>
-<p>前白俄罗斯外交官帕维尔?斯伦金（Pavel Slunkin）2023年7月24日曾在推特上回忆2015年他与时任中共外交部礼宾司司长秦刚共事的一段经历，据称，为了取悦最高领导人，秦刚带队临时半夜要求白俄一方人员去当地博物馆数台阶、放音乐，因为习准备参访这个博物馆。</p>
+<p>前白俄罗斯外交官帕维尔?斯伦金（Pavel Slunkin）2023年7月24日曾在推特上，回忆2015年他与时任中共外交部礼宾司司长秦刚共事的一段经历。据称，为了取悦中共最高领导人，秦刚带队临时半夜要求白俄一方人员去当地博物馆数台阶、放音乐，因为习准备参访这个博物馆。</p>
 <p>秦刚等人踏上博物馆的阶梯，一边数数一边问：“什么时候会奏乐？那时候主席（习近平）会踩在哪一阶？是这一阶吗？还是那一阶？你确定？”</p>
 <p>不知道霍小光的仕途命运离秦刚有多远？</p>
 <p>据知，霍小光还曾采写《黄土地的儿子回家了——习近平回梁家河看望父老乡亲》等。近年习近平当过知青的地方——梁家河，令想升官的官员趋之若鹜。霍小光也是这一类。</p>
@@ -32,7 +32,7 @@
 <p>2013年1月初，《财经》杂志副主编罗昌平及《南方周末》当时的记者均爆料称，时任广东省宣传部长的庹震强行删改《南方周末》新年献词。庹震此举被指是打压新闻自由和编辑自主权，而且删改后的内容多处出现严重错误。此事引发轩然大波，甚至出现编辑记者连署发表公开信抗议。但是，最终《南方周末》高层多人被撤换。</p>
 <p>事后有人在海外曝光庹震一系列丑闻。包括指庹震在到广东任职之前，在北京任职5年间共有6个情妇，其中一人在新华社工作，一人在经济日报社工作。庹震在北京任职期间，大量安排家乡亲戚朋友到北京任职。当时庹震名下有两套房产，但其直系亲属名下有八套昂贵的房产，总存款约人民币4,500万元，其一位在海外的直系亲属转移财产不明。</p>
 <p>不过，庹震之后还一路高升，2015年6月任中宣部副部长，2018年3月调任人民日报社总编辑；2020年10月20日接任人民日报社社长。</p>
-<p>对于劣迹斑斑的庹震获习近平青睐，且一路高升，北京资深媒体人高瑜曾对自由亚洲电台说，现在要“党媒姓党”，“党媒姓党”就是要执行“九号文件”，庹震立了大功。第一条就是把《中国梦宪政梦》给镇压了，把《南方周末》给整肃了，他就立了大功。</p>
+<p>对于劣迹斑斑的庹震获习近平青睐，且一路高升，北京资深媒体人高瑜曾对自由亚洲电台说，现在要“党媒姓党”，“党媒姓党”就是要执行“九号文件”，庹震立了大功。第一条就是把《中国梦、宪政梦》给镇压了，把《南方周末》给整肃了，他就立了大功。</p>
 <p>高瑜披露，在庹震之后，“中共中央就制定了‘九号文件’，完了之后我作为记者这就被抓了。他（习近平）现在用的就是这种人。中国媒体人你要想讲真话，你就进监狱；你要是昧着良心当‘刽子手’，进行整肃媒体、整肃媒体人，你就能升官。”</p>
 <h2>傅华肉麻媚习提三个“一分钟” 被指官迷心窍</h2>
 <p>中共二十大前，官方为习近平连任造势。</p>
@@ -42,42 +42,42 @@
 <p>不管是何种意图，傅华的三个“一分钟”堪称红朝丑剧中的代表戏码之一。</p>
 <h2>慎海雄捧习“扶大厦之将倾”被指高级黑</h2>
 <p>2022年8月25日，中宣部副部长、中央广播电视总台党组书记、台长兼总编辑慎海雄，在与该台新提拔的干部谈话时要求，“始终把忠诚核心、拥戴核心、维护核心、捍卫核心作为最大的政治”。他还说要进一步深化提升总台“头条工程”，“用心用情用功做好领袖宣传报导”。</p>
-<p>慎海雄被认为是习的“御用文人”之一，发表了不少“挺习”的文章，据说颇得习近平赏识。他在习上台后一路高升，2014年7月任新华社副社长，2015年8月，任广东省委常委、宣传部部长。2018年2月，转任国家新闻出版广电总局副局长兼中央电视台台长。2018年3月，任中央广播电视总台台长、党组书记，2020年5月9日兼任中央广播电视总台总编辑。2022年在中共二十大上成为中央委员。</p>
+<p>慎海雄被认为是习的“御用文人”之一，发表了不少“挺习”的文章，据说颇得习赏识。他在习上台后一路高升，2014年7月任新华社副社长，2015年8月，任广东省委常委、宣传部部长，2018年2月，转任国家新闻出版广电总局副局长兼中央电视台台长。2018年3月，他任中央广播电视总台台长、党组书记，2020年5月9日兼任中央广播电视总台总编辑。2022年在中共二十大上成为中央委员。</p>
 <p>2021年12月8日时慎海雄曾在中共党校机关报《学习时报》发文，捧习为“伟大舵手”，并称十八大以来，习近平“挽狂澜于既倒，扶大厦之将倾”。但慎海雄的“扶大厦之将倾”说法，被网民讽是一种“高级黑”，认为这泄露了中共要垮台的事实。</p>
-<p>事实上，过了中共二十大，今天中共政权面临内忧外患，党国大厦将倾的趋势还有持续，习近平自己走路也不稳，已经无力去扶了。</p>
+<p>事实上，过了中共二十大，今天中共政权面临内忧外患，党国大厦将倾的趋势还在持续，习近平自己也走路不稳，已经无力去扶了。</p>
 <p>大纪元首发</p>
 <p>责任编辑：孙芸#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963042.md#1">俞元：李强捧习背后的“一盘大棋”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981310.md#1">二线高官齐出动“调研” 李鸿忠借机捧习</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005909.md#1">岳山：中组部发文捧习近平 李干杰学林彪？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006622.md#1">岳山：“团派小弟”掌智库 吹捧习式经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/1/n13963042.md#1">俞元：李强捧习背后的“一盘大棋”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/25/n13981310.md#1">二线高官齐出动“调研” 李鸿忠借机捧习</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/29/n14005909.md#1">岳山：中组部发文捧习近平 李干杰学林彪？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/30/n14006622.md#1">岳山：“团派小弟”掌智库 吹捧习式经济</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/19/n10650677.md#1" target="_blank">林辉：开了北大自杀先例的史学教授</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/4/n11089256.md#1" target="_blank">一位军人法轮功学员 家庭工作中的风范</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/17/n11326982.md#1" target="_blank">金言：香港反送中会引发“蝴蝶效应”？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">美国务院年度报告 批中共严重打压宗教自由</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221642.md#1">“日食”的现象与奥秘 你知道多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223291.md#1">哈佛大学教授：UFO经多维空间到地球</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221764.md#1">文武双全的儒家典范颜真卿 何以终成道教神仙？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/7/n14219976.md#1">1岁时从高处摔落而濒死 女子见到自己的一生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14220557.md#1">【未解之谜】潜伏地球的外星生物？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224315.md#1">【晚间新闻】伊朗随时开战 多国紧急预警</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224307.md#1">【环球直击】福建黑帮遥控陆配 收购台护照供人冒用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224372.md#1">【新闻看点】中越首富都诈骗 结局大为不同</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223431.md#1">大陆金价连创历史新高后下跌 黄金股开盘暴跌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222752.md#1">美海岸警卫队：在南太平洋登临中国渔船合法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14222916.md#1">科学家首次在系外行星观测到类似佛光的图案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222771.md#1">胡歌双颊凹陷冒白发 零滤镜下被指老了10岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223634.md#1">章子怡主演《酱园弄》入围戛纳 角色海报曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222864.md#1">好莱坞巨星彼特再度否认家暴 暗讽裘莉耍手腕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222820.md#1">儿子贴父亲黑白照划清界线 吴镇宇发文怒批</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223667.md#1">渲染夫妻和婆媳矛盾？6部大陆短剧遭下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223212.md#1">用正确方法存放莴苣 放6周都不会坏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222781.md#1">锅子烧焦这样刷干净 不费吹灰之力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224196.md#1">专家：房屋的4个缺失会让买家反感 难以售出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/8/n14197285.md#1">慈禧两招安睡方 3分钟睡前伸展操</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/28/n14212517.md#1">摆脱自体免疫疾病！做3件事彻底修复免疫系统</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/13/n14224875.htm">徐客：红朝丑剧 五大吹鼓手“媚习”升官</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/4/13/n14224875.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/4/13/n14224875.htm">徐客：红朝丑剧 五大吹鼓手“媚习”升官</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/13/n14224875.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
